refactor: reduce container size

--- a/styles.css
+++ b/styles.css
@@ -22,16 +22,19 @@ aside {
 }
 
 .container {
-    width: 960px;
-    height: 960px;
+    width: 640px;
+    height: 640px;
     display: grid;
+    border-left: 1px solid black;
+    border-bottom: 1px solid black;
 }
 
 /*
 APPEARANCE
 */
 .container > div {
-    border:1px solid black;
+    border-top: 1px solid black;
+    border-right: 1px solid black;
 }
 
 button {
